# owlcloud

./: .gitignore  README.md  stack.yaml
owlcloud-albums/: owlcloud-albums.cabal
owlcloud-albums/src/: Main.hs
owlcloud-front/: owlcloud-front.cabal
owlcloud-front/src/: Main.hs
owlcloud-lib/: owlcloud-lib.cabal
owlcloud-lib/src/: Import.hs  OwlCloud.hs
owlcloud-lib/src/OwlCloud/: Common.hs  Types.hs
owlcloud-users/: owlcloud-users.cabal
owlcloud-users/src/: Main.hs
