name:                owlcloud-albums
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/k-bx/owlcloud-albums#readme
license:             BSD3
license-file:        LICENSE
author:              Kostiantyn Rybnikov
maintainer:          k-bx@k-bx.com
copyright:           Kostiantyn Rybnikov &lt;k-bx@k-bx.com&gt;
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable owlcloud-albums
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , either
                     , http-client
                     , owlcloud-lib
                     , servant
                     , servant-server
                     , wai
                     , warp
