name:                owlcloud-front
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/k-bx/microservices#readme
license:             BSD3
license-file:        LICENSE
author:              Kostiantyn Rybnikov
maintainer:          k-bx@k-bx.com
copyright:           Kostiantyn Rybnikov &lt;k-bx@k-bx.com&gt;
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable owlcloud-front
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , http-client
                     , http-types
                     , lens
                     , owlcloud-lib
                     , servant
                     , servant-server
                     , string-class
                     , text
                     , wai
                     , warp
                     , wreq
