name:                owlcloud-lib
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/k-bx/owlcloud-lib#readme
license:             BSD3
license-file:        LICENSE
author:              Kostiantyn Rybnikov
maintainer:          k-bx@k-bx.com
copyright:           Kostiantyn Rybnikov &lt;k-bx@k-bx.com&gt;
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , containers
                     , either
                     , http-client
                     , servant
                     , servant-client
                     , servant-server
                     , stm
                     , text
                     , time
                     , transformers
                     , uuid
                     , wai
                     , warp
  exposed-modules:     Import
                     , OwlCloud
                     , OwlCloud.Common
                     , OwlCloud.Types
